--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-#hr12, #hr24 { /* styled the 12 and 24 hour clocks */
+#hr24 { /* styled the 12 and 24 hour clocks */
   color: #00FF00;
   font-size: 1.5rem;
   padding: 1rem;
